add_subdirectory(krebs.3.prop1-func-interl.btor2.mlir.opt)
add_subdirectory(brp2.2.prop1-func-interl.btor2.mlir.opt)
add_subdirectory(elevator.4.prop1-func-interl.btor2.mlir.opt)
add_subdirectory(anderson.3.prop1-back-serstep.btor2.mlir.opt)
add_subdirectory(brp2.6.prop3-back-serstep.btor2.mlir.opt)
add_subdirectory(brp2.3.prop1-back-serstep.btor2.mlir.opt)
add_subdirectory(msmie.3.prop1-func-interl.btor2.mlir.opt)
add_subdirectory(pgm_protocol.3.prop5-func-interl.btor2.mlir.opt)
add_subdirectory(at.6.prop1-back-serstep.btor2.mlir.opt)
add_subdirectory(frogs.5.prop1-func-interl.btor2.mlir.opt)
add_subdirectory(pgm_protocol.7.prop1-back-serstep.btor2.mlir.opt)
add_subdirectory(rushhour.4.prop1-func-interl.btor2.mlir.opt)
add_subdirectory(blocks.4.prop1-back-serstep.btor2.mlir.opt)
add_subdirectory(peg_solitaire.3.prop1-back-serstep.btor2.mlir.opt)
add_subdirectory(mcs.3.prop1-back-serstep.btor2.mlir.opt)