add_subdirectory(cal102.btor2.mlir.opt)
add_subdirectory(cal162.btor2.mlir.opt)
add_subdirectory(cal41.btor2.mlir.opt)
add_subdirectory(h_TreeArb.btor2.mlir.opt)
add_subdirectory(cal106.btor2.mlir.opt)
add_subdirectory(cal176.btor2.mlir.opt)
add_subdirectory(cal81.btor2.mlir.opt)
add_subdirectory(miim.btor2.mlir.opt)
add_subdirectory(cal107.btor2.mlir.opt)
add_subdirectory(cal192.btor2.mlir.opt)
add_subdirectory(cal84.btor2.mlir.opt)
add_subdirectory(mul1.btor2.mlir.opt)
add_subdirectory(cal112.btor2.mlir.opt)
add_subdirectory(cal2.btor2.mlir.opt)
add_subdirectory(cal86.btor2.mlir.opt)
add_subdirectory(mul2.btor2.mlir.opt)
add_subdirectory(cal117.btor2.mlir.opt)
add_subdirectory(cal201.btor2.mlir.opt)
add_subdirectory(cal87.btor2.mlir.opt)
add_subdirectory(mul3.btor2.mlir.opt)
add_subdirectory(cal118.btor2.mlir.opt)
add_subdirectory(cal206.btor2.mlir.opt)
add_subdirectory(cal90.btor2.mlir.opt)
add_subdirectory(mul7.btor2.mlir.opt)
add_subdirectory(cal119.btor2.mlir.opt)
add_subdirectory(cal209.btor2.mlir.opt)
add_subdirectory(cal97.btor2.mlir.opt)
add_subdirectory(mul9.btor2.mlir.opt)
add_subdirectory(cal122.btor2.mlir.opt)
add_subdirectory(cal21.btor2.mlir.opt)
add_subdirectory(cal99.btor2.mlir.opt)
add_subdirectory(paper_v3.btor2.mlir.opt)
add_subdirectory(cal123.btor2.mlir.opt)
add_subdirectory(cal210.btor2.mlir.opt)
add_subdirectory(gen10.btor2.mlir.opt)
add_subdirectory(vcegar_QF_BV_ar.btor2.mlir.opt)
add_subdirectory(cal125.btor2.mlir.opt)
add_subdirectory(gen12.btor2.mlir.opt)
add_subdirectory(vcegar_QF_BV_itc99_b13_p10.btor2.mlir.opt)
add_subdirectory(cal129.btor2.mlir.opt)
add_subdirectory(gen14.btor2.mlir.opt)
add_subdirectory(vcegar_arrays_itc99_b12_p2.btor2.mlir.opt)
add_subdirectory(cal140.btor2.mlir.opt)
add_subdirectory(gen21.btor2.mlir.opt)
add_subdirectory(vis_arrays_am2901.btor2.mlir.opt)
add_subdirectory(cal142.btor2.mlir.opt)
add_subdirectory(gen31.btor2.mlir.opt)
add_subdirectory(vis_arrays_am2910_p1.btor2.mlir.opt)
add_subdirectory(cal143.btor2.mlir.opt)
add_subdirectory(cal33.btor2.mlir.opt)
add_subdirectory(gen35.btor2.mlir.opt)
add_subdirectory(vis_arrays_am2910_p2.btor2.mlir.opt)
add_subdirectory(cal149.btor2.mlir.opt)
add_subdirectory(cal34.btor2.mlir.opt)
add_subdirectory(gen39.btor2.mlir.opt)
add_subdirectory(vis_arrays_am2910_p3.btor2.mlir.opt)
add_subdirectory(cal156.btor2.mlir.opt)
add_subdirectory(cal35.btor2.mlir.opt)
add_subdirectory(gen43.btor2.mlir.opt)
add_subdirectory(vis_arrays_buf_bug.btor2.mlir.opt)
add_subdirectory(cal159.btor2.mlir.opt)
add_subdirectory(cal37.btor2.mlir.opt)
add_subdirectory(gen44.btor2.mlir.opt)
add_subdirectory(vis_arrays_bufferAlloc.btor2.mlir.opt)
add_subdirectory(cal161.btor2.mlir.opt)
add_subdirectory(cal4.btor2.mlir.opt)
add_subdirectory(h_RCU.btor2.mlir.opt)
