add_subdirectory(h_TreeArb.btor2.mlir.opt)
add_subdirectory(miim.btor2.mlir.opt)
add_subdirectory(mul1.btor2.mlir.opt)
add_subdirectory(mul2.btor2.mlir.opt)
add_subdirectory(mul3.btor2.mlir.opt)
add_subdirectory(mul7.btor2.mlir.opt)
add_subdirectory(mul9.btor2.mlir.opt)
add_subdirectory(paper_v3.btor2.mlir.opt)
add_subdirectory(gen10.btor2.mlir.opt)
add_subdirectory(vcegar_QF_BV_ar.btor2.mlir.opt)
add_subdirectory(gen12.btor2.mlir.opt)
add_subdirectory(vcegar_QF_BV_itc99_b13_p10.btor2.mlir.opt)
add_subdirectory(gen14.btor2.mlir.opt)
add_subdirectory(vcegar_arrays_itc99_b12_p2.btor2.mlir.opt)
add_subdirectory(gen21.btor2.mlir.opt)
add_subdirectory(vis_arrays_am2901.btor2.mlir.opt)
add_subdirectory(gen31.btor2.mlir.opt)
add_subdirectory(vis_arrays_am2910_p1.btor2.mlir.opt)
add_subdirectory(gen35.btor2.mlir.opt)
add_subdirectory(vis_arrays_am2910_p2.btor2.mlir.opt)
add_subdirectory(gen39.btor2.mlir.opt)
add_subdirectory(vis_arrays_am2910_p3.btor2.mlir.opt)
add_subdirectory(gen43.btor2.mlir.opt)
add_subdirectory(vis_arrays_buf_bug.btor2.mlir.opt)
add_subdirectory(gen44.btor2.mlir.opt)
add_subdirectory(vis_arrays_bufferAlloc.btor2.mlir.opt)
add_subdirectory(h_RCU.btor2.mlir.opt)
