add_subdirectory(rast-p00.btor.mlir.opt)
add_subdirectory(rast-p01.btor.mlir.opt)
add_subdirectory(rast-p04.btor.mlir.opt)
add_subdirectory(rast-p11.btor.mlir.opt)
add_subdirectory(rast-p14.btor.mlir.opt)
add_subdirectory(rast-p16.btor.mlir.opt)
add_subdirectory(rast-p17.btor.mlir.opt)
add_subdirectory(simple_alu.btor.mlir.opt)
add_subdirectory(rast-p03.btor.mlir.opt)
add_subdirectory(rast-p06.btor.mlir.opt)
add_subdirectory(rast-p18.btor.mlir.opt)
add_subdirectory(rast-p19.btor.mlir.opt)
add_subdirectory(rast-p21.btor.mlir.opt)
add_subdirectory(stack-p1.btor.mlir.opt)
add_subdirectory(stack-p2.btor.mlir.opt)
