add_subdirectory(VexRiscv-regch0-15-p0.btor.mlir.opt)
add_subdirectory(picorv32-pcregs-p0.btor.mlir.opt)
add_subdirectory(zipcpu-zipmmu-p00.btor.mlir.opt)
add_subdirectory(VexRiscv-regch0-20-p0.btor.mlir.opt)
add_subdirectory(picorv32-pcregs-p2.btor.mlir.opt)
add_subdirectory(zipcpu-zipmmu-p02.btor.mlir.opt)
add_subdirectory(VexRiscv-regch0-30-p1.btor.mlir.opt)
add_subdirectory(ponylink-slaveTXlen-unsat.btor.mlir.opt)
add_subdirectory(zipcpu-zipmmu-p09.btor.mlir.opt)
add_subdirectory(picorv32-check-p05.btor.mlir.opt)
add_subdirectory(zipcpu-zipmmu-p14.btor.mlir.opt)
add_subdirectory(picorv32-check-p09.btor.mlir.opt)
add_subdirectory(zipcpu-zipmmu-p26.btor.mlir.opt)
add_subdirectory(picorv32-check-p12.btor.mlir.opt)
add_subdirectory(zipcpu-zipmmu-p31.btor.mlir.opt)
add_subdirectory(picorv32-check-p19.btor.mlir.opt)
add_subdirectory(zipcpu-zipmmu-p33.btor.mlir.opt)
add_subdirectory(picorv32-check-p20.btor.mlir.opt)
add_subdirectory(zipcpu-zipmmu-p39.btor.mlir.opt)
add_subdirectory(picorv32-check-p22.btor.mlir.opt)
add_subdirectory(zipcpu-zipmmu-p48.btor.mlir.opt)
