add_subdirectory(picorv32_mutAX_nomem-p0.btor.mlir.opt)
add_subdirectory(picorv32_mutAY_nomem-p6.btor.mlir.opt)
add_subdirectory(picorv32_mutBY_nomem-p3.btor.mlir.opt)
add_subdirectory(picorv32_mutCX_nomem-p8.btor.mlir.opt)
add_subdirectory(picorv32_mutAX_nomem-p2.btor.mlir.opt)
add_subdirectory(picorv32_mutBX_nomem-p0.btor.mlir.opt)
add_subdirectory(picorv32_mutBY_nomem-p4.btor.mlir.opt)
add_subdirectory(picorv32_mutCY_nomem-p0.btor.mlir.opt)
add_subdirectory(picorv32_mutAX_nomem-p5.btor.mlir.opt)
add_subdirectory(picorv32_mutBX_nomem-p5.btor.mlir.opt)
add_subdirectory(picorv32_mutBY_nomem-p6.btor.mlir.opt)
add_subdirectory(picorv32_mutCY_nomem-p3.btor.mlir.opt)
add_subdirectory(picorv32_mutAY_nomem-p1.btor.mlir.opt)
add_subdirectory(picorv32_mutBX_nomem-p8.btor.mlir.opt)
add_subdirectory(picorv32_mutBY_nomem-p7.btor.mlir.opt)
add_subdirectory(picorv32_mutAY_nomem-p4.btor.mlir.opt)
add_subdirectory(picorv32_mutBY_nomem-p1.btor.mlir.opt)
add_subdirectory(picorv32_mutCX_nomem-p0.btor.mlir.opt)
