add_subdirectory(qspiflash_dualflexpress_divfive-p007.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p009.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p016.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p022.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p037.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p050.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p054.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p058.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p074.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p079.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p092.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p097.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p112.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p116.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p120.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p126.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p127.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p128.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p133.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p135.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p136.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p143.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p154.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p161.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divfive-p164.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p005.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p006.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p007.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p010.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p012.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p032.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p034.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p046.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p054.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p068.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p069.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p075.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p076.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p085.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p094.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p106.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p111.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p113.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p121.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p124.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p134.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p136.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p141.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p143.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p151.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p153.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p158.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p161.btor.mlir.opt)
add_subdirectory(qspiflash_dualflexpress_divthree-p164.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p017.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p029.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p036.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p038.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p048.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p063.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p064.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p067.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p075.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p079.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p094.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p100.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p104.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p107.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p113.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p121.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p122.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p137.btor.mlir.opt)
add_subdirectory(qspiflash_qflexpress_divfive-p139.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p036.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p047.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p064.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p066.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p070.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p075.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p082.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p088.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p089.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p093.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p099.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p105.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p109.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p110.btor.mlir.opt)
add_subdirectory(vgasim_imgfifo-p111.btor.mlir.opt)
add_subdirectory(zipversa_composecrc_prf-p00.btor.mlir.opt)
add_subdirectory(zipversa_composecrc_prf-p03.btor.mlir.opt)
add_subdirectory(zipversa_composecrc_prf-p10.btor.mlir.opt)
add_subdirectory(zipversa_composecrc_prf-p11.btor.mlir.opt)
add_subdirectory(zipversa_composecrc_prf-p15.btor.mlir.opt)
add_subdirectory(zipversa_composecrc_prf-p17.btor.mlir.opt)
add_subdirectory(zipversa_composecrc_prf-p22.btor.mlir.opt)
