add_subdirectory(arbitrated_top_n2_w128_d32_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n3_w8_d16_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n5_w8_d32_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w128_d64_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n2_w128_d64_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n4_w128_d16_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w128_d128_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w16_d128_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n2_w64_d64_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n4_w128_d64_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w128_d64_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w16_d16_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n2_w8_d128_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n4_w16_d16_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w128_d8_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w16_d32_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n2_w8_d16_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n4_w16_d32_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w16_d128_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w16_d64_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n2_w8_d32_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n4_w16_d64_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w16_d32_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w16_d8_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n2_w8_d64_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n4_w32_d32_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w16_d64_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w32_d128_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n3_w16_d128_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n4_w64_d32_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w32_d16_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w32_d16_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n3_w16_d32_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n4_w8_d64_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w32_d32_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w32_d8_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n3_w32_d16_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n5_w128_d64_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w64_d128_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w64_d8_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n3_w64_d128_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n5_w128_d8_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w64_d8_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w8_d128_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n3_w64_d64_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n5_w32_d32_e0.btor2.mlir.opt)
add_subdirectory(circular_pointer_top_w8_d16_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n3_w8_d128_e0.btor2.mlir.opt)
add_subdirectory(arbitrated_top_n5_w64_d16_e0.btor2.mlir.opt)
add_subdirectory(shift_register_top_w128_d16_e0.btor2.mlir.opt)
